--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
                     </ul>
                     <form novalidate="novalidate" onsubmit="return false;" class="searchbox sbx-twitter">
                       <div role="search" class="sbx-twitter__wrapper">
-                        <input type="search" name="search" placeholder="Search..." autocomplete="off" required="required" class="sbx-twitter__input">
+                        <input type="search" name="search" id="tipue_search_input" placeholder="Search..." autocomplete="off" required="required" class="sbx-twitter__input">
                         <button type="submit" title="Submit your search query." class="sbx-twitter__submit">
                           <svg role="img" aria-label="Search">
                             <use xlink:href="#sbx-icon-search-8"></use>
@@ -178,5 +178,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src={{ "/assets/js/scripts.js" | relative_url }}></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <link rel="stylesheet" href="{{ "/assets/tipuesearch/css/normalize.css" | relative_url }}">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="{{ "/assets/tipuesearch/tipuesearch_content.js" | relative_url }}"></script>
+        <link rel="stylesheet" href="{{ "/assets/tipuesearch/css/tipuesearch.css" | relative_url }}">
+        <script src="{{ "/assets/tipuesearch/tipuesearch_set.js" | relative_url }}"></script>
+        <script src="{{ "/assets/tipuesearch/tipuesearch.min.js" | relative_url }}"></script>
       </body>
   </html>
