--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
                     </form>
                 </div>
 
+                <div id="tipue_search_content"></div>
+
                 <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
                   <symbol xmlns="http://www.w3.org/2000/svg" id="sbx-icon-search-8" viewBox="0 0 40 40">
                     <path d="M16 32c8.835 0 16-7.165 16-16 0-8.837-7.165-16-16-16C7.162 0 0 7.163 0 16c0 8.835 7.163 16 16 16zm0-5.76c5.654 0 10.24-4.586 10.24-10.24 0-5.656-4.586-10.24-10.24-10.24-5.656 0-10.24 4.584-10.24 10.24 0 5.654 4.584 10.24 10.24 10.24zM28.156 32.8c-1.282-1.282-1.278-3.363.002-4.643 1.282-1.284 3.365-1.28 4.642-.003l6.238 6.238c1.282 1.282 1.278 3.363-.002 4.643-1.283 1.283-3.366 1.28-4.643.002l-6.238-6.238z"
@@ -174,7 +176,6 @@
             Powered by <img class="copyright" src={{ "img/virtualshield.svg" | relative_url }} alt="..." />
           </div>
         </footer>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src={{ "/assets/js/scripts.js" | relative_url }}></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
@@ -184,5 +185,10 @@
         <link rel="stylesheet" href="{{ "/assets/tipuesearch/css/tipuesearch.css" | relative_url }}">
         <script src="{{ "/assets/tipuesearch/tipuesearch_set.js" | relative_url }}"></script>
         <script src="{{ "/assets/tipuesearch/tipuesearch.min.js" | relative_url }}"></script>
+        <script>
+          $(document).ready(function() {
+            $('#tipue_search_input').tipuesearch();
+          });
+        </script>
       </body>
   </html>
