--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,8 +66,8 @@
                 <p class="masthead-subheading"><b class="red">GraphQL</b> is a simple way to</p>
                 <p class="masthead-subheading"><b class="red">connect front and back end.</b></p>
                 <p class="masthead-subheading">
-                  <a class="btn btn-tertiary btn-x2 text-uppercase" href="/guides">GET STARTED</a>
-                  <a class="btn btn-tertiary btn-x2 text-uppercase" href="/source">SOURCE CODE</a>
+                  <a class="btn btn-tertiary btn-x2 text-uppercase" href="graphql/pages/guides">GET STARTED</a>
+                  <a class="btn btn-tertiary btn-x2 text-uppercase" href="/graphql/pages/source">SOURCE CODE</a>
                 </p>
                 <img class="banner-img" src={{ "img/banner.svg" | relative_url }} alt="..." />
             </div>
