--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -116,6 +116,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background: #1C1C1C;
 }
 
 hr {
@@ -4020,6 +4021,7 @@ textarea.form-control-lg {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  background: #FFFFFF;
 }
 
 .menu-accordion > li > a {
@@ -11512,7 +11514,7 @@ p i {
 header.masthead {
   padding-top: 10.5rem;
   text-align: center;
-  color: #333333;
+  color: #FFFFFF;
   /* background-image: url("../assets/img/header-bg.jpg"); */
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -12115,7 +12117,7 @@ h4 {
   text-align: center;
   font-size: 0.9rem;
   font-family: "roboto-regular", "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: #F9F9F9;
+  background-color: #D9D9D9;
   text-align: left;
 }
 
