--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3067,7 +3067,7 @@ textarea.form-control-lg {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #FFFFFF;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -3077,7 +3077,7 @@ textarea.form-control-lg {
       -ms-user-select: none;
           user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 1px solid #FFFFFF;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   border-radius: 0.25rem;
