--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11481,7 +11481,7 @@ p i {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     border: none;
-    background-color: transparent;
+    background-color: #FFFFFF;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
