--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -12059,6 +12059,7 @@ h4 {
   margin-top: 1rem !important;
   margin-bottom: 1rem !important;
   font-family: 'ITC-Bold', Times, serif;
+  color: #D31027;
 }
 
 .menu-accordion {
