--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11525,7 +11525,7 @@ header.masthead .masthead-subheading {
   font-size: 1.5rem;
   line-height: .1rem;
   margin-bottom: 25px;
-  color: #333333;
+  color: #FFFFFF;
   font-family: "ITC", "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
