--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3163,7 +3163,7 @@ textarea.form-control-lg {
 
 .btn-tertiary {
   border-radius: 10px;
-  border: 1px solid #333333;
+  border: 1px solid #FFFFFF;
 }
 .btn-tertiary:hover {
   color: #fff;
