--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,12 @@
                         <li class="nav-item"><a class="nav-link" href={{ "pages/guides" | relative_url }}><b>GUIDES</b></a></li>
                         <li class="nav-item"><a class="nav-link" href={{ "pages/source" | relative_url }}><b>SOURCE CODE</b></a></li>
                     </ul>
-                    <form action="{{ page.url | relative_url }}">
-                      <div class="tipue_search_left"><img src="{{ "/assets/tipuesearch/search.png" | relative_url }}" class="tipue_search_icon"></div>
-                      <div class="tipue_search_right"><input type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="At least 3 characters" required></div>
-                      <div style="clear: both;"></div>
+                    <form action="{{ page.url | relative_url }}" class="searchbox sbx-twitter">
+                      <div role="search" class="sbx-twitter__wrapper">
+                        <div class="tipue_search_left"><img src="{{ "/assets/tipuesearch/search.png" | relative_url }}" class="tipue_search_icon"></div>
+                        <div class="tipue_search_right"><input type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="At least 3 characters" required></div>
+                        <div style="clear: both;"></div>
+                      </div>
                     </form>
 
                     <!-- <form novalidate="novalidate" onsubmit="return false;" class="searchbox sbx-twitter">
