--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
                     <!-- <form novalidate="novalidate" onsubmit="return false;" class="searchbox sbx-twitter">
                       <div role="search" class="sbx-twitter__wrapper">
-                        <input type="search" name="search" id="tipue_search_input" placeholder="Search..." autocomplete="off" required="required" class="sbx-twitter__input">
+                        <input type="search" name="search" placeholder="Search..." autocomplete="off" required="required" class="sbx-twitter__input">
                         <button type="submit" title="Submit your search query." class="sbx-twitter__submit">
                           <svg role="img" aria-label="Search">
                             <use xlink:href="#sbx-icon-search-8"></use>
@@ -42,8 +42,7 @@
                           </svg>
                         </button>
                       </div>
-                    </form>
-                    <div id="tipue_search_content"></div> -->
+                    </form> -->
                 </div>
 
                 <!-- <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
