--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -69,7 +69,7 @@ http://www.tipue.com/search
 
 #tipue_search_content
 {
-  max-width: 100%;
+  width: 100%;
 	padding-top: 15px;
 	margin: 0;
   margin-top: 145px;
