--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -124,14 +124,14 @@ http://www.tipue.com/search
 }
 .tipue_search_content_text
 {
-	color: #333;
+	   color: #fff;
      word-wrap: break-word;
      hyphens: auto;
      margin-top: 5px;
 }
 .tipue_search_content_bold
 {
-     color: #333;
+     color: #fff;
 }
 .tipue_search_content_debug
 {
