--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -75,6 +75,7 @@ http://www.tipue.com/search
   margin-top: 145px;
   display: table;
   text-align: center;
+  background-color: #fff;
 }
 #tipue_search_results_count
 {
