--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -132,7 +132,7 @@ http://www.tipue.com/search
 }
 .tipue_search_content_bold
 {
-     color: #fff;
+     color: #D31027;
 }
 .tipue_search_content_debug
 {
