--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -37,16 +37,23 @@ http://www.tipue.com/search
 
 #tipue_search_input
 {
-     color: #333;
-     max-width: 210px;
-	padding: 17px;
-	border: 1px solid #e3e3e3;
-	border-radius: 0;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-     box-shadow: none;
-	outline: 0;
-	margin: 0;
+    color: #333;
+    border: 1px solid #333333;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 1px #E1E8ED;
+    background: #FFF;
+    padding: 0;
+    padding-right: 52px;
+    padding-left: 16px;
+    width: 100%;
+    height: 100%;
+  	-moz-appearance: none;
+	  -webkit-appearance: none;
+	  outline: 0;
+	  margin: 0;
+}
+#tipue_search_input:focus, #tipue_search_input:active {
+  border-color: #D31027;
 }
 .tipue_search_icon
 {
