--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -38,6 +38,7 @@ http://www.tipue.com/search
 #tipue_search_input
 {
     color: #333;
+    max-width: 210px;
     border: 1px solid #333333;
     border-radius: 10px;
     box-shadow: inset 0 0 0 1px #E1E8ED;
