--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11914,7 +11914,7 @@ b.red {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background: url(assets/tipuesearch/search.png) no-repeat scroll 7px 7px;
+  background: url('assets/tipuesearch/search.png') no-repeat scroll 7px 7px;
   padding-left:30px;
 }
 
