--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -80,7 +80,7 @@ http://www.tipue.com/search
   width: 100%;
 	padding-top: 15px;
 	margin: 0;
-  margin-top: 120px;
+  padding-top: 120px;
   display: table;
   text-align: center;
   background-color: #fff;
