--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -83,6 +83,7 @@ http://www.tipue.com/search
 	padding-top: 15px;
 	margin: 0;
   padding-top: 140px;
+  padding-bottom: 10px;
   display: table;
   text-align: center;
   background-color: #fff;
