--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -52,9 +52,10 @@ http://www.tipue.com/search
 	  -webkit-appearance: none;
 	  outline: 0;
 	  margin: 0;
-    background: url('../search.png') no-repeat scroll 7px 7px;
-    padding-left:30px;
     min-height: 35px;
+    background: url('../search.png') no-repeat scroll 7px 7px;
+    background-size: 28px;
+    background-position: right;
 }
 #tipue_search_input:focus, #tipue_search_input:active {
   border-color: #D31027;
