--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2814,6 +2814,23 @@ progress {
   filter: invert(1) grayscale(100%) brightness(200%);
 }
 
+
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
+.fixed-bottom {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1030;
+}
+
 .m-0 {
   margin: 0 !important;
 }
