--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1003,6 +1003,14 @@ progress {
   border-color: #212529;
 }
 
+#navbarResponsive {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 .btn-outline-primary {
   color: #ffc800;
   border-color: #ffc800;
