--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -511,7 +511,7 @@ progress {
 }
 @media (max-width: 575px) {
   .masthead-subheading {
-    font-size: 1rem;
+    font-size: 1rem!important;
   }
   .masthead-subheading .btn-tertiary {
     font-size: 0.75rem;
