--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -508,6 +508,10 @@ progress {
     max-width: 540px;
   }
 
+  .masthead-subheading {
+    text-align: center;
+  }
+
 }
 @media (max-width: 575px) {
   .masthead-subheading {
